kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ipadvogados
  namespace: summtech
  labels:
    app: ipadvogados
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ipadvogados
  template:
    metadata:
      labels:
        app: ipadvogados
    spec:
      containers:
        - name: ipadvogados
          image: ghcr.io/fernandogomesdf/ipadvogados:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
