kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ipadvogados
  namespace: summtech
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ipadvogados
